tenant/rhem-virtual-machine/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rhem-on-rhel-webui
spec:
  selector:
    kubevirt.io/domain: rhem-virtual-machine
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      name: webui
---
apiVersion: v1
kind: Service
metadata:
  name: rhem-on-rhel-api
spec:
  selector:
    kubevirt.io/domain: rhem-virtual-machine
  ports:
    - protocol: TCP
      port: 3443
      targetPort: 3443
      name: api
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-webui
spec:
  selector:
    kubevirt.io/domain: rhem-virtual-machine
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: webui
---
apiVersion: v1
kind: Service
metadata:
  name: rhem-on-rhel-ssh
spec:
  selector:
    kubevirt.io/domain: rhem-virtual-machine
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
      name: ssh
